Fix map on iOS

--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -30,7 +30,7 @@
   }
 
   .fullmap {
-    height: auto;
+    height: 60%;
     width: 100%;
   }
 
